apps/coturn/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coturn
  labels:
    goldilocks.fairwinds.com/enabled: "true"
