apps/coturn/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coturn
spec:
  endpointSelector:
    matchLabels:
      app: coturn
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "3478"
              protocol: UDP
            - port: "3478"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "49152"
              endPort: 49200
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "1"
              endPort: 65535
              protocol: UDP
            - port: "1"
              endPort: 65535
              protocol: TCP
